change index and form

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,23 +1,36 @@
 @import "variables";
 @import "blocks/scaffolding";
-@import "blocks/main-header";
+@import "blocks/body";
+@import "blocks/container";
+@import "blocks/visually-hidden";
+@import "blocks/header";
+@import "blocks/nav";
+@import "blocks/icon";
+@import "blocks/logo";
 @import "blocks/main";
+@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/image";
+@import "blocks/banner";
+@import "blocks/load";
+@import "blocks/button";
 @import "blocks/offer";
-@import "blocks/form-name";
-@import "blocks/form-travels";
-@import "blocks/form-contacts";
-@import "blocks/form-radio";
-@import "blocks/form-textarea";
-@import "blocks/button-form";
-@import "blocks/form-required";
-@import "blocks/photo";
-@import "blocks/photo-box";
-@import "blocks/upload";
 @import "blocks/advantages";
-@import "blocks/study";
 @import "blocks/reivew";
+@import "blocks/pagination";
 @import "blocks/price";
 @import "blocks/contacts";
 @import "blocks/map";
-@import "blocks/main-footer";
-@import "blocks/social";
+@import "blocks/title";
+@import "blocks/form";
+
+// @import "blocks/form-radio";
+// @import "blocks/form-required";
+// @import "blocks/form-textarea";
+// @import "blocks/button-form";
+// @import "blocks/photo";
+// @import "blocks/photo-box";
+// @import "blocks/upload";
+// @import "blocks/study";
+// @import "blocks/download";
+// @import "blocks/tools";
