--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,27 +1,27 @@
 .nav {
   position: absolute;
-  top: 66px;
-  left: 0;
-  right: 0;
-  background-color: @color-main;
   z-index: 90;
-  transform: translateY(-150%);
+  top: 66px;
+  right: 0;
+  left: 0;
   transition: @trasition;
+  transform: translateY(-150%);
+  background-color: @color-main;
 
   &.is-opened,
   &.is-no-js {
     transform: translateY(0);
+    animation: openMenu 0.2s ease-in-out forwards;
 
     @keyframes openMenu {
       50% {
         position: fixed;
       }
+
       100% {
         position: static;
       }
     }
-
-    animation: openMenu 0.2s ease-in-out forwards;
   }
 }
 
@@ -30,18 +30,19 @@
 }
 
 .nav__link {
-  min-height: 63px;
-  border-top: 1px solid @color-sixth;
-  box-shadow: @box-shadow-first;
-  color: @color-text-second;
   display: block;
+  min-height: 63px;
+  transition: @trasition;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: @color-text-second;
+  border-top: 1px solid @color-sixth;
+  box-shadow: 0 1px 0 0 #000000,
+    inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
   font-size: 18px;
   font-weight: 700;
-  text-decoration: none;
   line-height: 63px;
-  text-align: center;
-  transition: @trasition;
-  text-transform: uppercase;
 
   &[href]:hover,
   &[href]:focus {
@@ -52,4 +53,3 @@
     opacity: 0.3;
   }
 }
-
