--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -48,7 +48,7 @@ body {
 
 body {
   color: @color-text;
-  font: 16px/24px "Open Sans", Arial, Helvetica, sans-serif;
+  font: 16px/24px "Open Sans", "Arial", "Helvetica", sans-serif;
 }
 
 h1,
