--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -20,7 +20,9 @@
 
 @tablet-width: 660px;
 
-@trasition: all 0.2s ease-in-out;
+@trasition: all .2s ease-in-out;
+
+@box-shadow-first: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
 
 // breakpoints
 @desktop: 1600px;
