--- a/source/less/blocks/form-required.less
+++ b/source/less/blocks/form-required.less
@@ -1,16 +1,13 @@
-.form-required__form {
+.form__required {
   padding-bottom: 30px;
+  margin: 0;
+  text-align: center;
+  text-transform: uppercase;
+  color: @black-blue;
+  font-size: 14px;
+  line-height: 30px;
+}
 
-  .form-required {
-    margin: 0;
-    text-align: center;
-    text-transform: uppercase;
-    color: @black-blue;
-    font-size: 14px;
-    line-height: 30px;
-  }
-
-  .form-mark {
-    color: @pink;
-  }
+.form-mark {
+  color: @pink;
 }
