finished mobile dev

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -51,7 +51,7 @@
     margin: 0;
     padding-left: 70px;
     cursor: pointer;
-    transition: @trasition;
+    transition: @transition;
     text-transform: capitalize;
     color: @color-main;
     font-size: 18px;
@@ -66,7 +66,7 @@
     width: 39px;
     height: 39px;
     content: "";
-    transition: @trasition;
+    transition: @transition;
     border: 2px solid @color-silver-second;
     border-radius: 3px;
   }
@@ -78,7 +78,7 @@
     width: 57px;
     height: 57px;
     content: "";
-    transition: @trasition;
+    transition: @transition;
     opacity: 0;
     background-image: url("../../img/sprite.svg#icon-yes-check");
     background-repeat: no-repeat;
@@ -106,7 +106,7 @@
   width: 100%;
   height: 63px;
   padding: 0 20px;
-  transition: @trasition;
+  transition: @transition;
   border: 2px solid @color-silver-second;
   font-size: 18px;
   line-height: 63px;
