--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -17,7 +17,7 @@
   text-indent: 100%;
   border-radius: 50%;
   background-color: @color-main;
-  transition: @trasition;
+  transition: @transition;
 
   &:not(&_active) {
     opacity: 0.3;
