--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,10 +23,10 @@
 @import "blocks/map";
 @import "blocks/title";
 @import "blocks/form";
+@import "blocks/photo";
+@import "blocks/filter";
+@import "blocks/range";
 
-// @import "blocks/photo";
-// @import "blocks/photo-box";
-// @import "blocks/upload";
+
 // @import "blocks/study";
 // @import "blocks/download";
-// @import "blocks/tools";
