--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -32,7 +32,7 @@
   font-size: 24px;
   font-weight: 300;
   line-height: 29px;
-  transition: @trasition;
+  transition: @transition;
 
   &:hover,
   &:focus {
