--- a/source/less/blocks/icon.less
+++ b/source/less/blocks/icon.less
@@ -1,5 +1,5 @@
 .icon {
-  transition: @trasition;
+  transition: @transition;
 
   &_logo-mobile {
     width: 75px;
@@ -47,6 +47,11 @@
     height: 20px;
   }
 
+  &_size_s {
+    width: 13px;
+    height: 13px;
+  }
+
   &_size_m {
     width: 27px;
     height: 27px;
@@ -55,6 +60,11 @@
   &_size_l {
     width: 31px;
     height: 31px;
+  }
+
+  &_size_xl {
+    width: 44px;
+    height: 44px;
   }
 
   &_first {
