--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -1,3 +1,7 @@
-.main {
-  flex-grow: 1;
+.main__title {
+  margin: 54px 0;
+  padding: 0 20px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 2.14;
 }
