--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -4,24 +4,14 @@
   top: 66px;
   right: 0;
   left: 0;
-  transition: @trasition;
+  transition: @transition;
   transform: translateY(-150%);
   background-color: @color-main;
 
   &.is-opened,
   &.is-no-js {
     transform: translateY(0);
-    animation: openMenu 0.2s ease-in-out forwards;
-
-    @keyframes openMenu {
-      50% {
-        position: fixed;
-      }
-
-      100% {
-        position: static;
-      }
-    }
+    animation: open-menu 0.2s ease-in-out forwards;
   }
 }
 
@@ -32,7 +22,7 @@
 .nav__link {
   display: block;
   min-height: 63px;
-  transition: @trasition;
+  transition: @transition;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -51,5 +41,15 @@
 
   &[href]:active {
     opacity: 0.3;
+  }
+}
+
+@keyframes open-menu {
+  50% {
+    position: absolute;
+  }
+
+  100% {
+    position: static;
   }
 }
