--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -12,7 +12,7 @@
   display: flex;
   width: 50px;
   height: 50px;
-  transition: @trasition;
+  transition: @transition;
   border: 3px solid @color-black-first;
   border-radius: 50%;
   font-size: 0;
