--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -21,10 +21,11 @@
 
 @color-black: #000000;
 @color-black-first: rgba(40, 54, 69, 0.1);
+@color-black-second: rgba(40, 54, 69, 0.3);
 
 @tablet-width: 660px;
 
-@trasition: all 0.2s ease-in-out;
+@transition: all 0.2s ease-in-out;
 // @box-shadow-first: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
 
 @font: "Open Sans", "Arial", "Helvetica", sans-serif;
