--- a/source/less/blocks/range.less
+++ b/source/less/blocks/range.less
@@ -4,11 +4,7 @@
   padding: 0;
   background-color: transparent;
 
-  -webkit-appearance: none;
-}
-
-.range:focus {
-  // outline: none;
+  appearance: none;
 }
 
 .range::-webkit-slider-runnable-track {
@@ -30,7 +26,7 @@
   border-radius: 50%;
   background: @color-silver-second;
 
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 .range:hover::-webkit-slider-thumb {
