--- a/source/less/style.less
+++ b/source/less/style.less
@@ -26,7 +26,8 @@
 @import "blocks/photo";
 @import "blocks/filter";
 @import "blocks/range";
+@import "blocks/study";
+@import "blocks/link";
 
 
-// @import "blocks/study";
 // @import "blocks/download";
