--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -15,6 +15,7 @@
 @color-brand-second: #1c9b5e;
 
 @color-silver: #fefefe;
+@color-silver-first: #dedede;
 @color-silver-second: #e5e5e5;
 @color-silver-third: #f2f2f2;
 @color-silver-fourth: rgba(255, 255, 255, 0.3);
@@ -23,20 +24,11 @@
 @color-black-first: rgba(40, 54, 69, 0.1);
 @color-black-second: rgba(40, 54, 69, 0.3);
 
-@tablet-width: 660px;
-
 @transition: all 0.2s ease-in-out;
 // @box-shadow-first: 0px 1px 0 0 #000000, inset 0px 1px 0 0 rgba(255, 255, 255, 0.15);
 
 @font: "Open Sans", "Arial", "Helvetica", sans-serif;
 
 // breakpoints
-@desktop: 1600px;
-@desktop-small: 1440px;
-@tablet-landscape: 1200px;
-@tablet: 1024px;
-@tablet-small: 768px;
-@phone-landscape: 570px;
-@phone: 480px;
-@phone-small: 320px;
-@hamburger: @tablet-landscape;
+@desktop: 1200px;
+@tablet: 660px;
