--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,14 +1,122 @@
 .advantages {
   padding-top: 80px;
   background-color: @color-silver-third;
+
+  @media (min-width: @tablet) {
+    padding-top: 5px;
+  }
+
+  @media (min-width: @desktop) {
+    padding-top: 0;
+  }
+}
+
+.advantages__wrap {
+  overflow: hidden;
+
+  @media (min-width: @tablet) {
+    display: flex;
+
+    align-items: center;
+  }
+
+  @media (min-width: @desktop) {
+    display: block;
+  }
+
+  &::after {
+    position: relative;
+    bottom: -40px;
+    display: block;
+    flex: 1 0 auto;
+    width: 157px;
+    height: 320px;
+    margin: 0 auto;
+    content: "";
+    background-image: url("../../img/iphone-screen-mobile@1x.png");
+
+    @media (min-width: @tablet) {
+      z-index: 10;
+      bottom: -1px;
+      width: 268px;
+      height: 481px;
+      margin: 0;
+      margin-right: 40px;
+      background-image: url("../../img/iphone-screen-3-tablet@1x.png");
+    }
+
+    @media (min-width: @desktop) {
+      display: none;
+    }
+  }
 }
 
 .advantages__list {
   list-style-type: none;
+
+  @media (min-width: @tablet) {
+    max-width: 525px;
+    margin-top: 30px;
+    padding: 24px 0;
+
+    order: 2;
+  }
+
+  @media (min-width: @desktop) {
+    display: flex;
+    max-width: none;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.advantages__item {
+  &::before {
+    @media (min-width: @desktop) {
+      position: relative;
+      display: block;
+      width: 300px;
+      height: 302px;
+      content: "";
+      background-repeat: no-repeat;
+      background-position: 50% 0;
+      background-size: contain;
+      z-index: 10;
+    }
+  }
+
+  &_first::before {
+    @media (min-width: @desktop) {
+      background-image: url("../../img/iphone-screen-1-desktop@1x.png");
+    }
+  }
+
+  &_second::before {
+    @media (min-width: @desktop) {
+      background-image: url("../../img/iphone-screen-2-desktop@1x.png");
+    }
+  }
+
+  &_third::before {
+    @media (min-width: @desktop) {
+      background-image: url("../../img/iphone-screen-3-desktop@1x.png");
+    }
+  }
 }
 
 .advantages__item:not(:last-child) {
-  margin-bottom: 40px;
+  margin-bottom: 32px;
+
+  @media (min-width: @desktop) {
+    margin-right: 20px;
+    margin-bottom: 0;
+  }
+}
+
+.advantages__info {
+  @media (min-width: @desktop) {
+    padding: 53px 30px 0;
+  }
 }
 
 .advantages__title {
@@ -19,40 +127,21 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
+
+  @media (min-width: @desktop) {
+    font-size: 30px;
+    line-height: 1;
+    margin-bottom: 24px;
+  }
 }
 
 .advantages__text {
   text-align: center;
   font-size: 14px;
   line-height: 24px;
-}
 
-.advantages__images {
-  overflow: hidden;
-  text-align: center;
-}
-
-.advantages__img {
-  position: relative;
-  top: 48px;
-}
-
-@media screen and (min-width: @tablet-width) {
-  .advantages {
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .advantages__list {
-    max-width: 320px;
-    padding-left: 10px;
-  }
-
-  .advantages__title {
-    text-align: left;
-  }
-
-  .advantages__text {
-    text-align: left;
+  @media (min-width: @desktop) {
+    font-size: 18px;
+    line-height: 30px;
   }
 }
