--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -1,3 +1,24 @@
+.banner {
+  background-color: @color-main;
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+
+  @media (min-width: @tablet) {
+    position: relative;
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
+  }
+
+  @media (min-width: @desktop) {
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+  }
+}
+
+.banner > .container {
+  padding: 0;
+}
+
 .banner__top {
   position: relative;
   display: flex;
@@ -5,14 +26,37 @@
   min-height: 462px;
   margin-top: -66px;
   content: "";
-  background-color: @color-main;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-size: cover;
+
+  @media (min-width: @tablet) {
+    min-height: 730px;
+    margin-top: -110px;
+  }
+
+  @media (min-width: @desktop) {
+    min-height: 853px;
+    margin-top: 0;
+  }
 
   &_inner {
     min-height: 237px;
+  }
+}
+
+.banner__img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 258px;
+
+  @media (min-width: @tablet) {
+    right: -20px;
+    left: auto;
+    width: 700px;
+  }
+
+  @media (min-width: @desktop) {
+    width: 1050px;
+    right: -125px;
   }
 }
 
@@ -24,6 +68,7 @@
 
 /* IE11 */
 @media all and (-ms-high-contrast: none) {
+
   ::-ms-backdrop,
   .banner__top {
     height: 462px;
