--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -66,7 +66,7 @@
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @tablet) {
   .download {
     width: 300px;
     margin-top: 95px;
