--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -6,7 +6,7 @@
   background-size: cover;
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @tablet) {
   .map {
     min-height: 375px;
     background-image: url("../../img/bg-map-tablet@1x.jpg");
