--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -8,15 +8,48 @@
   transform: translateY(-150%);
   background-color: @color-main;
 
+  @media (min-width: @desktop) {
+    position: static;
+    display: flex;
+    transform: none;
+    z-index: 1;
+    background-color: transparent;
+    margin-left: auto;
+  }
+
   &.is-opened,
   &.is-no-js {
     transform: translateY(0);
     animation: open-menu 0.2s ease-in-out forwards;
+
+    @keyframes open-menu {
+      50% {
+        position: absolute;
+      }
+
+      100% {
+        position: static;
+      }
+    }
+
+    @media (min-width: @desktop) {
+      animation: none;
+    }
   }
 }
 
 .nav__list {
   list-style-type: none;
+
+  @media (min-width: @desktop) {
+    display: flex;
+  }
+}
+
+.nav__item:not(:last-child) {
+  @media (min-width: @desktop) {
+    margin-right: 80px;
+  }
 }
 
 .nav__link {
@@ -42,14 +75,14 @@
   &[href]:active {
     opacity: 0.3;
   }
-}
 
-@keyframes open-menu {
-  50% {
-    position: absolute;
-  }
-
-  100% {
-    position: static;
+  @media (min-width: @desktop) {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1;
+    text-transform: capitalize;
+    min-height: auto;
+    border: none;
+    box-shadow: none;
   }
 }
