--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -3,7 +3,17 @@
 
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 33px;
+
+  @media (min-width: @desktop) {
+    display: none;
+  }
+
+  &_none_table {
+    @media (min-width: @tablet) {
+      display: none;
+    }
+  }
 }
 
 .pagination__item {
@@ -11,7 +21,6 @@
   overflow: hidden;
   width: 6px;
   height: 6px;
-  margin-right: 16px;
   cursor: pointer;
   vertical-align: bottom;
   text-indent: 100%;
@@ -19,12 +28,12 @@
   background-color: @color-main;
   transition: @transition;
 
-  &:not(&_active) {
+  &:not(.is-active) {
     opacity: 0.3;
   }
 
-  &:last-child {
-    margin-right: 0;
+  &:not(:last-child) {
+    margin-right: 18px;
   }
 
   &:hover,
@@ -36,7 +45,7 @@
     opacity: 0.1;
   }
 
-  &_active {
+  &.is-active {
     width: 12px;
     height: 12px;
     border: 3px solid @color-main;
@@ -46,7 +55,7 @@
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @tablet) {
   .pagination {
     width: 100%;
 
