--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,6 +1,10 @@
 .price {
-  padding: 104px 0 40px;
+  padding: 95px 0 50px;
   background-color: @color-silver-third;
+
+  @media (min-width: @tablet) {
+    padding: 89px 20px 70px;
+  }
 }
 
 .price__slider {
@@ -12,17 +16,29 @@
 
 .price__list {
   min-width: 280px;
-  margin: 0;
-  padding: 0;
   list-style: none;
   border-right: 1px solid @color-silver-second;
   border-left: 1px solid @color-silver-second;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet) {
+    min-width: 155px;
+  }
+
+  &_first {
+    display: none;
+    margin-top: 78px;
+
+    @media (min-width: @tablet) {
+      display: block;
+    }
+  }
 }
 
 .price__item {
   display: flex;
   box-sizing: border-box;
-  height: 63px;
+  height: 62px;
   padding: 0 22px;
   text-transform: uppercase;
   color: @color-main;
@@ -35,6 +51,11 @@
   justify-content: space-between;
   align-items: center;
 
+  @media (min-width: @tablet) {
+    justify-content: center;
+    height: 47px;
+  }
+
   &_top {
     padding: 15px 0 20px;
     text-align: center;
@@ -44,6 +65,13 @@
     font-weight: 700;
     height: 96px;
     display: block;
+    border: solid 2px @color-main;
+
+    @media (min-width: @tablet) {
+      font-size: 16px;
+      padding: 8px 0 0;
+      height: 78px;
+    }
   }
 
   &_hit {
@@ -58,6 +86,14 @@
     height: 72px;
     content: "";
     background-image: url("../../img/bg-hit.svg");
+    background-size: cover;
+
+    @media (min-width: @tablet) {
+      width: 64px;
+      height: 64px;
+      top: -7px;
+      left: -3px;
+    }
   }
 
   &_hit::after {
@@ -73,15 +109,43 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 30px;
+
+    @media (min-width: @tablet) {
+      width: 64px;
+      height: 64px;
+      top: -3px;
+      left: -2px;
+    }
+  }
+
+  &_bd-top {
+    border-top: 2px solid @color-silver-second;
+  }
+
+  &_first {
+    justify-content: flex-start;
+    text-transform: capitalize;
+    font-size: 14px;
+    padding: 0 15px;
+  }
+}
+
+.price__item:not(.price__item_top) span {
+  @media (min-width: @tablet) {
+    display: none;
   }
 }
 
 .price__money {
   font-size: 24px;
   font-weight: 300;
+
+  @media (min-width: @tablet) {
+    font-size: 18px;
+  }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @tablet) {
   .price {
     &::before {
       height: 55px;
