--- a/source/less/blocks/reivew.less
+++ b/source/less/blocks/reivew.less
@@ -1,20 +1,66 @@
 .reivew {
-  padding: 48px 0 40px;
   position: relative;
+  padding: 40px 0 46px;
+
+  @media (min-width: @tablet) {
+    padding: 0 0 20px;
+  }
+
+  @media (min-width: @desktop) {
+    padding: 0 0 35px;
+  }
+}
+
+.reivew__wrapper {
+  @media (min-width: @tablet) {
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .reivew__title {
-  margin: 0;
+  margin-bottom: 18px;
   text-align: center;
   color: @color-black;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  margin-bottom: 24px;
+
+  @media (min-width: @tablet) {
+    width: 100%;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 0;
+
+    order: 1;
+  }
+
+  @media (min-width: @desktop) {
+    font-size: 24px;
+  }
 }
 
-.reivew__title-description {
+.reivew__info {
   display: none;
+  margin: 0;
+  margin-top: 2px;
+  margin-bottom: 34px;
+  color: @color-black;
+  font-size: 14px;
+  line-height: 30px;
+
+  order: 2;
+
+  @media (min-width: @tablet) {
+    display: flex;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop) {
+    font-size: 18px;
+  }
 }
 
 .reivew__content {
@@ -22,43 +68,10 @@
   text-align: center;
   font-size: 14px;
   line-height: 30px;
-}
 
-@media (min-width: @tablet-width) {
-  .reivew {
-    padding-top: 34px;
-    padding-bottom: 13px;
-  }
-
-  .reivew__slider {
-    display: flex;
-
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .reivew__title {
-    width: 100%;
-    font-size: 20px;
-    line-height: 30px;
-
-    order: 1;
-  }
-
-  .reivew__title-description {
-    display: flex;
-    margin: 0;
-    margin-top: 2px;
-    margin-bottom: 34px;
-    color: @color-black;
-    font-size: 14px;
-    line-height: 30px;
-
-    order: 1;
-  }
-
-  .reivew__content {
+  @media (min-width: @tablet) {
     margin-bottom: 35px;
     font-size: 18px;
+    max-width: 685px;
   }
 }
