--- a/source/less/blocks/study.less
+++ b/source/less/blocks/study.less
@@ -1,61 +1,105 @@
 .study {
   display: none;
-  min-height: 400px;
+  margin-bottom: 98px;
 
-  &__wrapper {
-    width: 310px;
-    padding-top: 10px;
-  }
-
-  &__timer {
-    position: relative;
-    width: 240px;
-    height: 276px;
-  }
-
-  &__timer::after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 202px;
-    height: 202px;
-    content: "";
-    border: 14px solid @pink;
-    border-radius: 50%;
-    background-color: red;
-  }
-
-  &__title {
-    max-width: 270px;
-    margin: 0;
-    margin-bottom: 10px;
-    color: #000000;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 36px;
-  }
-
-  &__content {
-    margin: 0;
-    margin-bottom: 10px;
-    color: @black-silver;
-    font-size: 14px;
-    line-height: 24px;
-  }
-
-  &__link {
+  @media (min-width: @tablet) {
     display: block;
-    color: @pink;
-    font-size: 14px;
-    line-height: 24px;
+    padding-top: 60px;
+  }
+
+  @media (min-width: @tablet) {
+    background-color: @color-silver-third;
+    padding: 65px 0;
   }
 }
 
-@media (min-width: @tablet-width) {
-  .study {
-    display: flex;
+.study__wrapper {
+  display: flex;
+}
 
-    justify-content: space-between;
+.study__timer {
+  position: relative;
+  width: 238px;
+  height: 276px;
+  margin-right: 70px;
+
+  &::after {
+    position: absolute;
+    top: 54px;
+    left: 20px;
+    display: flex;
+    box-sizing: border-box;
+    width: 202px;
+    height: 202px;
+    content: "24";
+    color: @color-fourth;
+    border: 14px solid @color-fourth;
+    border-radius: 50%;
+    font-size: 96px;
+    font-weight: bold;
+
+    justify-content: center;
     align-items: center;
+
+    @media (min-width: @desktop) {
+      line-height: 1.56;
+      width: 253px;
+      height: 253px;
+      top: 70px;
+      left: 23px;
+      font-size: 120px;
+
+    }
+  }
+
+  @media (min-width: @desktop) {
+    width: 298px;
+    height: 345px;
+  }
+}
+
+.study__content {
+  max-width: 525px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 24px;
+  margin-top: 36px;
+
+  @media (min-width: @desktop) {
+    margin-top: 90px;
+  }
+}
+
+.study__title {
+  margin-bottom: 10px;
+  color: @color-black;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+
+  @media (min-width: @tablet) {
+    max-width: 280px;
+  }
+
+  @media (min-width: @desktop) {
+    max-width: none;
+    margin-bottom: 22px;
+  }
+}
+
+.study__text {
+  margin-bottom: 10px;
+
+  @media (min-width: @desktop) {
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+.study__content > .link {
+  @media (min-width: @desktop) {
+    font-size: 18px;
+    line-height: 30px;
   }
 }
