--- a/source/less/blocks/load.less
+++ b/source/less/blocks/load.less
@@ -26,13 +26,13 @@
 .load__list {
   display: flex;
   max-width: 207px;
-  margin: 32px auto 20px;
+  margin: 36px auto 20px;
   list-style-type: none;
 
   justify-content: space-between;
 
   @media (min-width: @tablet) {
-    margin: 44px auto 38px;
+    margin: 50px auto 38px;
   }
 
   @media (min-width: @desktop) {
@@ -61,6 +61,8 @@
   @media (min-width: @tablet) {
     margin: 0;
     max-width: none;
+    font-size: 18px;
+    line-height: 1.33;
   }
 
   @media (min-width: @desktop) {
