--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -24,10 +24,14 @@
     width: 147px;
     height: 40px;
     display: block;
-    margin: 0 auto;
+    margin: -9px auto 0;
 
     @media (min-width: @tablet) {
       margin: 0;
+    }
+
+    @media (min-width: @desktop) {
+      margin-top: -5px;
     }
   }
 
