--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -19,6 +19,7 @@
 @color-silver-second: #e5e5e5;
 @color-silver-third: #f2f2f2;
 @color-silver-fourth: rgba(255, 255, 255, 0.3);
+@color-silver-fifth: #efefef;
 
 @color-black: #000000;
 @color-black-first: rgba(40, 54, 69, 0.1);
