--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -86,6 +86,15 @@
     }
   }
 
+  &:not(:last-child) {
+    margin-bottom: 30px;
+
+    @media (min-width: @desktop) {
+      margin-right: 20px;
+      margin-bottom: 0;
+    }
+  }
+
   &_first::before {
     @media (min-width: @desktop) {
       background-image: url("../../img/iphone-screen-1-desktop@1x.png");
@@ -102,15 +111,6 @@
     @media (min-width: @desktop) {
       background-image: url("../../img/iphone-screen-3-desktop@1x.png");
     }
-  }
-}
-
-.advantages__item:not(:last-child) {
-  margin-bottom: 32px;
-
-  @media (min-width: @desktop) {
-    margin-right: 20px;
-    margin-bottom: 0;
   }
 }
 
