--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,24 +1,39 @@
 .contacts {
   position: relative;
+
   padding: 45px 0 40px;
+
   text-align: center;
 
   @media (min-width: @tablet) {
     padding: 45px 0 30px;
   }
+
+  @media (min-width: @desktop) {
+    padding: 65px 0 0;
+  }
 }
 
-.contacts__wrapper {
+.contacts__list {
+  list-style-type: none;
+
   @media (min-width: @tablet) {
     display: flex;
-    flex-direction: column;
-    align-items: center;
 
+    padding: 0 6px;
+
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  @media (min-width: @desktop) {
+    padding: 0;
   }
 }
 
 .contacts__title {
   margin-bottom: 35px;
+
   font-size: 24px;
   font-weight: 300;
   line-height: 1.2;
@@ -26,20 +41,21 @@
   @media (min-width: @tablet) {
     width: 100%;
     margin-bottom: 43px;
+
     font-size: 40px;
   }
-}
 
-.contacts__group {
-  @media (min-width: @tablet) {
-   display: flex;
-   min-width: 525px;
-   justify-content: space-between;
+  @media (min-width: @desktop) {
+    width: 100%;
+    margin-bottom: 55px;
+
+    font-size: 50px;
   }
 }
 
 .contacts__item {
   display: block;
+
   font-size: 18px;
   font-weight: 700;
 
@@ -47,17 +63,39 @@
     line-height: 1.5;
   }
 
-  &_indent {
+  &:not(:last-child) {
     margin-bottom: 23px;
 
     @media (min-width: @tablet) {
-      margin-bottom: 48px;
+      margin-bottom: 0;
     }
   }
 
-  &_width_s {
+  &:last-child {
     @media (min-width: @tablet) {
-     max-width: 270px;
+      max-width: 270px;
+      margin-top: 46px;
     }
+
+    @media (min-width: @desktop) {
+      max-width: 215px;
+      margin-top: 0;
+
+      order: 2;
+    }
+  }
+
+  &:nth-child(2) {
+    @media (min-width: @desktop) {
+      order: 3;
+    }
+  }
+}
+
+.contacts__item span {
+  @media (min-width: @desktop) {
+    display: inline-block;
+
+    margin-bottom: 20px;
   }
 }
