--- a/source/less/blocks/link.less
+++ b/source/less/blocks/link.less
@@ -41,6 +41,10 @@
     font-size: 24px;
     font-weight: 300;
     line-height: 1.25;
+
+    @media (min-width: @tablet) {
+      line-height: 1.33;
+    }
   }
 
   &_block {
