--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,9 +1,14 @@
 .price {
-  padding: 95px 0 50px;
+  padding: 89px 0 50px;
+
   background-color: @color-silver-third;
 
   @media (min-width: @tablet) {
     padding: 89px 20px 70px;
+  }
+
+  @media (min-width: @desktop) {
+    padding: 155px 20px 94px;
   }
 }
 
@@ -15,35 +20,50 @@
 }
 
 .price__list {
+  box-sizing: border-box;
   min-width: 280px;
+
   list-style: none;
+
   border-right: 1px solid @color-silver-second;
   border-left: 1px solid @color-silver-second;
-  box-sizing: border-box;
 
   @media (min-width: @tablet) {
     min-width: 155px;
   }
 
+  @media (min-width: @desktop) {
+    min-width: 236px;
+  }
+
   &_first {
     display: none;
+
     margin-top: 78px;
 
     @media (min-width: @tablet) {
       display: block;
+    }
+
+    @media (min-width: @desktop) {
+      margin-top: 98px;
     }
   }
 }
 
 .price__item {
   display: flex;
+
   box-sizing: border-box;
   height: 62px;
   padding: 0 22px;
+
   text-transform: uppercase;
+
   color: @color-main;
   border-bottom: 2px solid @color-silver-second;
   background-color: @color-second;
+
   font-size: 14px;
   font-weight: 400;
   line-height: 30px;
@@ -52,25 +72,43 @@
   align-items: center;
 
   @media (min-width: @tablet) {
-    justify-content: center;
     height: 47px;
+
+    justify-content: center;
+  }
+
+  @media (min-width: @desktop) {
+    height: 61px;
   }
 
   &_top {
+    display: block;
+
+    height: 96px;
     padding: 15px 0 20px;
+
     text-align: center;
+
     color: @color-text-second;
+    border: solid 2px @color-main;
     background-color: @color-main;
+
     font-size: 18px;
     font-weight: 700;
-    height: 96px;
-    display: block;
-    border: solid 2px @color-main;
 
     @media (min-width: @tablet) {
-      font-size: 16px;
-      padding: 8px 0 0;
       height: 78px;
+      padding: 8px 0 0;
+
+      font-size: 16px;
+    }
+
+    @media (min-width: @desktop) {
+      height: 98px;
+      padding: 15px 0 0;
+
+      font-size: 18px;
+      line-height: 1.67;
     }
   }
 
@@ -82,17 +120,28 @@
     position: absolute;
     top: 0;
     left: 0;
+
     width: 72px;
     height: 72px;
-    content: "";
-    background-image: url("../../img/bg-hit.svg");
+
+    content: '';
+
+    background-image: url('../../img/bg-hit.svg');
     background-size: cover;
 
     @media (min-width: @tablet) {
+      top: -7px;
+      left: -2px;
+
       width: 64px;
       height: 64px;
-      top: -7px;
-      left: -3px;
+    }
+    @media (min-width: @desktop) {
+      top: -1px;
+      left: -2px;
+
+      width: 71px;
+      height: 71px;
     }
   }
 
@@ -100,21 +149,26 @@
     position: absolute;
     top: 5px;
     left: 4px;
+
     width: 72px;
     height: 72px;
-    content: "Хит";
+
+    content: 'Хит';
     transform: rotate(-45deg);
     text-transform: uppercase;
+
     color: @color-text-second;
+
     font-size: 14px;
     font-weight: 600;
     line-height: 30px;
 
     @media (min-width: @tablet) {
-      width: 64px;
-      height: 64px;
       top: -3px;
       left: -2px;
+
+      width: 64px;
+      height: 64px;
     }
   }
 
@@ -123,10 +177,20 @@
   }
 
   &_first {
-    justify-content: flex-start;
-    text-transform: capitalize;
-    font-size: 14px;
     padding: 0 15px;
+
+    text-transform: capitalize;
+
+    font-size: 14px;
+
+    justify-content: flex-start;
+
+    @media (min-width: @desktop) {
+      padding: 0 23px;
+
+      font-size: 18px;
+      line-height: 1.67;
+    }
   }
 }
 
@@ -142,6 +206,11 @@
 
   @media (min-width: @tablet) {
     font-size: 18px;
+  }
+
+  @media (min-width: @desktop) {
+    font-size: 24px;
+    line-height: 1.25;
   }
 }
 
