--- a/source/less/blocks/reivew.less
+++ b/source/less/blocks/reivew.less
@@ -1,5 +1,6 @@
 .reivew {
   position: relative;
+
   padding: 40px 0 46px;
 
   @media (min-width: @tablet) {
@@ -12,27 +13,50 @@
 }
 
 .reivew__wrapper {
+  position: relative;
+
   @media (min-width: @tablet) {
     display: flex;
 
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  @media (min-width: @desktop) {
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
+
+.reivew__quotes {
+  display: none;
+
+  margin-bottom: 44px;
+
+  @media (min-width: @desktop) {
+    display: block;
+  }
 }
 
 .reivew__title {
   margin-bottom: 18px;
+
   text-align: center;
+
   color: @color-black;
+
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
 
   @media (min-width: @tablet) {
     width: 100%;
+    margin-bottom: 0;
+
     font-size: 20px;
     line-height: 30px;
-    margin-bottom: 0;
 
     order: 1;
   }
@@ -44,10 +68,13 @@
 
 .reivew__info {
   display: none;
+
   margin: 0;
   margin-top: 2px;
   margin-bottom: 34px;
+
   color: @color-black;
+
   font-size: 14px;
   line-height: 30px;
 
@@ -55,6 +82,7 @@
 
   @media (min-width: @tablet) {
     display: flex;
+
     margin-bottom: 0;
   }
 
@@ -65,13 +93,52 @@
 
 .reivew__content {
   margin: 0;
+
   text-align: center;
+
   font-size: 14px;
   line-height: 30px;
 
   @media (min-width: @tablet) {
+    max-width: 690px;
     margin-bottom: 35px;
+
     font-size: 18px;
-    max-width: 685px;
+  }
+}
+
+.reivew__arrow {
+  position: absolute;
+  top: 50%;
+
+  display: none;
+
+  margin-top: 14px;
+
+  cursor: pointer;
+  transform: translateY(-50%);
+
+  opacity: .3;
+  transition: @transition;
+
+  @media (min-width: @desktop) {
+    display: block;
+  }
+
+  &:hover,
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.1;
+  }
+
+  &_left {
+    left: 0;
+  }
+
+  &_right {
+    right: 0;
   }
 }
