--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -10,6 +10,10 @@
       margin: 0;
       margin-left: -20px;
     }
+
+    @media (min-width: @desktop) {
+      margin-left: 6px;
+    }
   }
 }
 
