--- a/source/less/blocks/study.less
+++ b/source/less/blocks/study.less
@@ -7,9 +7,10 @@
     padding-top: 60px;
   }
 
-  @media (min-width: @tablet) {
+  @media (min-width: @desktop) {
     background-color: @color-silver-third;
     padding: 65px 0;
+    margin-bottom: 74px;
   }
 }
 
