--- a/source/less/blocks/reivew.less
+++ b/source/less/blocks/reivew.less
@@ -1,6 +1,5 @@
 .reivew {
   position: relative;
-
   padding: 40px 0 46px;
 
   @media (min-width: @tablet) {
@@ -32,7 +31,6 @@
 
 .reivew__quotes {
   display: none;
-
   margin-bottom: 44px;
 
   @media (min-width: @desktop) {
@@ -42,11 +40,8 @@
 
 .reivew__title {
   margin-bottom: 18px;
-
   text-align: center;
-
   color: @color-black;
-
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
@@ -54,7 +49,6 @@
   @media (min-width: @tablet) {
     width: 100%;
     margin-bottom: 0;
-
     font-size: 20px;
     line-height: 30px;
 
@@ -68,13 +62,10 @@
 
 .reivew__info {
   display: none;
-
   margin: 0;
   margin-top: 2px;
   margin-bottom: 34px;
-
   color: @color-black;
-
   font-size: 14px;
   line-height: 30px;
 
@@ -82,7 +73,6 @@
 
   @media (min-width: @tablet) {
     display: flex;
-
     margin-bottom: 0;
   }
 
@@ -93,16 +83,13 @@
 
 .reivew__content {
   margin: 0;
-
   text-align: center;
-
   font-size: 14px;
   line-height: 30px;
 
   @media (min-width: @tablet) {
     max-width: 690px;
     margin-bottom: 35px;
-
     font-size: 18px;
   }
 }
@@ -110,16 +97,12 @@
 .reivew__arrow {
   position: absolute;
   top: 50%;
-
   display: none;
-
   margin-top: 14px;
-
   cursor: pointer;
-  transform: translateY(-50%);
-
-  opacity: .3;
   transition: @transition;
+  transform: translateY(-50%);
+  opacity: 0.3;
 
   @media (min-width: @desktop) {
     display: block;
