--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -4,7 +4,6 @@
   @media (min-width: @tablet) {
     display: flex;
     flex-direction: column;
-
     margin-bottom: 50px;
     padding-top: 50px;
   }
@@ -66,7 +65,6 @@
 .form__inner {
   @media (min-width: @tablet) {
     padding: 0 60px 56px;
-
     border: 2px solid @color-silver-second;
     border-radius: 3px;
   }
@@ -86,18 +84,14 @@
 
 .form__text {
   margin: 8px 0 35px;
-
   text-align: center;
-
   color: @color-main;
-
   font-size: 14px;
   line-height: 30px;
 
   @media (min-width: @tablet) {
     max-width: 505px;
     margin: 0 auto 71px;
-
     font-size: 18px;
     line-height: 1.67;
   }
@@ -119,7 +113,6 @@
   @media (min-width: @tablet) {
     position: relative;
     top: -14px;
-
     text-align: center;
   }
 
@@ -134,23 +127,17 @@
 
 .form__title {
   margin: -3px 0 40px;
-
   text-align: center;
   text-transform: uppercase;
-
   color: @color-fourth;
-
   font-size: 14px;
   line-height: 18px;
 
   @media (min-width: @tablet) {
     display: inline-block;
-
     margin: 0 0 30px;
     padding: 0 32px;
-
     background-color: @color-second;
-
     font-weight: 400;
   }
 
@@ -208,13 +195,9 @@
 
 .form__label {
   display: block;
-
   margin: 0 0 5px 23px;
-
   text-transform: uppercase;
-
   color: @color-fourth;
-
   font-size: 14px;
   line-height: 30px;
 
@@ -224,16 +207,12 @@
 
   &_check {
     position: relative;
-
     margin: 0;
     padding-left: 70px;
-
     cursor: pointer;
     transition: @transition;
     text-transform: none;
-
     color: @color-main;
-
     font-size: 18px;
     line-height: 39px;
 
@@ -246,14 +225,11 @@
     position: absolute;
     top: 0;
     left: 0;
-
     box-sizing: border-box;
     width: 39px;
     height: 39px;
-
-    content: '';
+    content: "";
     transition: @transition;
-
     border: 2px solid @color-silver-second;
     border-radius: 3px;
   }
@@ -262,15 +238,12 @@
     position: absolute;
     top: -9px;
     left: -9px;
-
     width: 57px;
     height: 57px;
-
-    content: '';
+    content: "";
     transition: @transition;
-
     opacity: 0;
-    background-image: url('../../img/sprite.svg#icon-yes-check');
+    background-image: url("../../img/sprite.svg#icon-yes-check");
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -283,10 +256,8 @@
   &_radio::after {
     top: 12px;
     left: 12px;
-
     width: 15px;
     height: 15px;
-
     border-radius: 50%;
     background-color: @color-fourth;
     background-image: none;
@@ -309,14 +280,10 @@
     z-index: 2;
     top: 2px;
     right: 2px;
-
     display: none;
-
     width: 59px;
     height: 59px;
-
-    content: '';
-
+    content: "";
     background-color: @color-silver-second;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -327,12 +294,12 @@
   }
 
   &_tel::after {
-    background-image: url('../../img/sprite.svg#icon-phone');
+    background-image: url("../../img/sprite.svg#icon-phone");
     background-size: 70px 70px;
   }
 
   &_mail::after {
-    background-image: url('../../img/sprite.svg#icon-mail');
+    background-image: url("../../img/sprite.svg#icon-mail");
     background-size: 50px 50px;
   }
 }
@@ -343,18 +310,14 @@
   width: 100%;
   height: 63px;
   padding: 0 20px;
-
   transition: @transition;
-
   border: 2px solid @color-silver-second;
-
   font-family: @font;
   font-size: 18px;
   line-height: 63px;
 
   &::placeholder {
     color: @color-main;
-
     font-size: 18px;
     line-height: 63px;
   }
@@ -371,9 +334,7 @@
     min-height: 200px;
     padding: 18px;
     padding-top: 15px;
-
     resize: none;
-
     line-height: 30px;
   }
 
@@ -382,20 +343,20 @@
   }
 }
 
-.form__check:checked+.form__label_check::after {
+.form__check:checked + .form__label_check::after {
   opacity: 1;
 }
 
-.form__check:hover+.form__label_check::before,
-.form__check:focus+.form__label_check::before {
+.form__check:hover + .form__label_check::before,
+.form__check:focus + .form__label_check::before {
   border: 2px solid @color-main;
 }
 
-.form__check:checked+.form__label_check::before {
+.form__check:checked + .form__label_check::before {
   border: 2px solid @color-fourth;
 }
 
-.form__check:active+.form__label_check::before {
+.form__check:active + .form__label_check::before {
   border: 2px solid @color-fourth;
 }
 
@@ -410,12 +371,9 @@
 
 .form__required {
   display: block;
-
   margin-top: 35px;
-
   text-align: center;
   text-transform: uppercase;
-
   font-size: 14px;
   line-height: 30px;
 
