--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,20 +1,17 @@
 .map {
   height: 200px;
-
-  background-image: url('../img/bg-map-mobile@1x.png');
+  background-image: url("../img/bg-map-mobile@1x.png");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover;
 
   @media (min-width: @tablet) {
     min-height: 375px;
-
-    background-image: url('../../img/bg-map-tablet@1x.jpg');
+    background-image: url("../../img/bg-map-tablet@1x.jpg");
   }
 
   @media (min-width: @desktop) {
     min-height: 520px;
-
-    background-image: url('../../img/bg-map-desktop@1x.jpg');
+    background-image: url("../../img/bg-map-desktop@1x.jpg");
   }
 }
