--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,6 +1,5 @@
 .price {
   padding: 89px 0 50px;
-
   background-color: @color-silver-third;
 
   @media (min-width: @tablet) {
@@ -22,9 +21,7 @@
 .price__list {
   box-sizing: border-box;
   min-width: 280px;
-
   list-style: none;
-
   border-right: 1px solid @color-silver-second;
   border-left: 1px solid @color-silver-second;
 
@@ -38,7 +35,6 @@
 
   &_first {
     display: none;
-
     margin-top: 78px;
 
     @media (min-width: @tablet) {
@@ -53,17 +49,13 @@
 
 .price__item {
   display: flex;
-
   box-sizing: border-box;
   height: 62px;
   padding: 0 22px;
-
   text-transform: uppercase;
-
   color: @color-main;
   border-bottom: 2px solid @color-silver-second;
   background-color: @color-second;
-
   font-size: 14px;
   font-weight: 400;
   line-height: 30px;
@@ -83,30 +75,24 @@
 
   &_top {
     display: block;
-
     height: 96px;
     padding: 15px 0 20px;
-
     text-align: center;
-
     color: @color-text-second;
     border: solid 2px @color-main;
     background-color: @color-main;
-
     font-size: 18px;
     font-weight: 700;
 
     @media (min-width: @tablet) {
       height: 78px;
       padding: 8px 0 0;
-
       font-size: 16px;
     }
 
     @media (min-width: @desktop) {
       height: 98px;
       padding: 15px 0 0;
-
       font-size: 18px;
       line-height: 1.67;
     }
@@ -120,26 +106,22 @@
     position: absolute;
     top: 0;
     left: 0;
-
     width: 72px;
     height: 72px;
-
-    content: '';
-
-    background-image: url('../../img/bg-hit.svg');
+    content: "";
+    background-image: url("../../img/bg-hit.svg");
     background-size: cover;
 
     @media (min-width: @tablet) {
       top: -7px;
       left: -2px;
-
       width: 64px;
       height: 64px;
     }
+
     @media (min-width: @desktop) {
       top: -1px;
       left: -2px;
-
       width: 71px;
       height: 71px;
     }
@@ -149,16 +131,12 @@
     position: absolute;
     top: 5px;
     left: 4px;
-
     width: 72px;
     height: 72px;
-
-    content: 'Хит';
+    content: "Хит";
     transform: rotate(-45deg);
     text-transform: uppercase;
-
     color: @color-text-second;
-
     font-size: 14px;
     font-weight: 600;
     line-height: 30px;
@@ -166,7 +144,6 @@
     @media (min-width: @tablet) {
       top: -3px;
       left: -2px;
-
       width: 64px;
       height: 64px;
     }
@@ -178,16 +155,13 @@
 
   &_first {
     padding: 0 15px;
-
     text-transform: capitalize;
-
     font-size: 14px;
 
     justify-content: flex-start;
 
     @media (min-width: @desktop) {
       padding: 0 23px;
-
       font-size: 18px;
       line-height: 1.67;
     }
