finished form.html

--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -9,6 +9,12 @@
     padding: 74px 0;
   }
 
+  &_inner {
+    @media (min-width: @desktop) {
+      padding: 24px 0;
+    }
+  }
+
   &_none-mobile {
     display: none;
 
