--- a/source/less/blocks/icon.less
+++ b/source/less/blocks/icon.less
@@ -27,6 +27,10 @@
 
   &_logo-tablet_footer {
     display: block;
+
+    @media (min-width: @desktop) {
+      display: none;
+    }
   }
 
   &_logo-desktop {
