finished pages - pixel perfect

--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -48,6 +48,16 @@
       padding: 140px 0 98px;
     }
   }
+
+  &_height {
+    @media (min-width: @tablet) {
+      min-height: 440px;
+    }
+
+    @media (min-width: @desktop) {
+      min-height: 394px;
+    }
+  }
 }
 
 .banner__img {
