--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -1,7 +1,32 @@
 .main__title {
-  margin: 54px 0;
+  margin: 50px 0;
   padding: 0 20px;
   text-align: center;
   font-size: 14px;
   line-height: 2.14;
+
+  @media (min-width: @tablet) {
+    font-size: 18px;
+    line-height: 1.67;
+    margin: 92px auto 76px;
+    max-width: 460px;
+  }
+
+  @media (min-width: @desktop) {
+    margin: 92px auto 88px;
+    max-width: 590px;
+  }
+
+  &_indent {
+    margin: 44px 0;
+
+    @media (min-width: @tablet) {
+      margin: 44px auto 70px;
+    }
+
+    @media (min-width: @desktop) {
+      margin: 5px auto 65px;
+      max-width: 440px;
+    }
+  }
 }
