--- a/source/less/blocks/title.less
+++ b/source/less/blocks/title.less
@@ -59,6 +59,12 @@
     }
   }
 
+  &_width_m {
+    @media (min-width: @desktop) {
+      max-width: 400px;
+    }
+  }
+
   &_width_l {
     @media (min-width: @desktop) {
       max-width: 900px;
